# gearboxfx

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
app-gui/: CMakeLists.txt  main_gui.cpp
documents/: DSP Architecture - Platform Abstration.md  Effect Chain Design.md  Phase 1a.md  Programmable Guitar Effect Box - Kế hoạch & Thiết kế Phát triển Toàn diện.md  Programmable Guitar Effect Box - Tài liệu Mô tả Kỹ thuật (Technical Specification Document).md  phase1b.md
dsp-core/: CMakeLists.txt
dsp-core/include/: AudioBuffer.h  EffectChain.h  EffectEngine.h  EffectNode.h  IAudioIO.h  ParameterManager.h  PresetStore.h
dsp-core/include/effects/: EffectNodeRegistry.h
dsp-core/include/effects/dynamics/: CompressorNode.h  NoiseGateNode.h
dsp-core/include/effects/eq/: EQNode.h
dsp-core/include/effects/gain/: CleanBoostNode.h  DistortionNode.h  OverdriveNode.h
dsp-core/include/effects/modulation/: ChorusNode.h  FlangerNode.h  PhaserNode.h  PitchShifterNode.h  TremoloNode.h
dsp-core/include/effects/output/: VolumeNode.h
dsp-core/include/effects/time/: DelayNode.h  ReverbNode.h
dsp-core/src/: EffectChain.cpp  EffectEngine.cpp  EffectNode.cpp  EffectNodeRegistry.cpp  ParameterManager.cpp  PresetStore.cpp
dsp-core/src/effects/dynamics/: CompressorNode.cpp  NoiseGateNode.cpp
dsp-core/src/effects/eq/: EQNode.cpp
dsp-core/src/effects/gain/: CleanBoostNode.cpp  DistortionNode.cpp  OverdriveNode.cpp
dsp-core/src/effects/modulation/: ChorusNode.cpp  FlangerNode.cpp  PhaserNode.cpp  PitchShifterNode.cpp  TremoloNode.cpp
dsp-core/src/effects/output/: VolumeNode.cpp
dsp-core/src/effects/time/: DelayNode.cpp  ReverbNode.cpp
platform/desktop-gui/: AppContext.h  CMakeLists.txt  GearBoxApp.cpp  GearBoxApp.h  GuiAudioIO.cpp  GuiAudioIO.h  stb_vorbis_impl.c
platform/desktop-gui/panels/: ChainPanel.cpp  ChainPanel.h  ParamPanel.cpp  ParamPanel.h  PresetPanel.cpp  PresetPanel.h  TransportPanel.cpp  TransportPanel.h
platform/file-sim/: CMakeLists.txt  FileAudioIO.cpp  FileAudioIO.h  stb_vorbis_impl.c
presets/: 01_clean_boost.json  02_mild_overdrive.json  02a_mild_overdrive_reverb.json  03_heavy_distortion.json  04_chorus_clean.json  05_delay_reverb.json  06_cathedral_shimmer.json  08_bright_clean_eq.json  09_jet_flanger.json  10_phaser_funk.json  11_octave_up.json  12_warm_overdrive_full.json  13_blues_classic.json
tests/: CMakeLists.txt  test_effect_chain.cpp  test_effects.cpp  test_preset_store.cpp
